--- a/package.json
+++ b/package.json
@@ -2,17 +2,22 @@
   "name": "ejs-challenge",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.16.3",
+    "formik": "^2.2.9",
     "lodash": "^4.17.21",
-    "mongoose": "^6.9.1"
+    "mongoose": "^6.9.1",
+    "react-router-dom": "^6.10.0"
   }
 }
