--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
+    "axios": "^1.3.6",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^6.10.0",
     "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
