--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.9.1",
+    "morgan": "^1.10.0",
     "react-router-dom": "^6.10.0"
   }
 }
