--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.9.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "react-router-dom": "^6.10.0"
   }
 }
